--- a/index.html
+++ b/index.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Home</title>
+    <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="wwr/index.html">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
-    </nav>  
-    <h1>Anna Mott</h1>
-    <img src="images/myphoto.jpg" width="400px" alt="Image of me">
-    <p>Hello Everyone!</p>
-    <p>I am a Software Engineering major. 
-        With this major, I am going to be spending the rest of my life creating code. I am excited to be learning.
-        how to do create websites. I know that this will likely be something that I do many times during any potential career knowing these.
-        things I will be able to have a wider range of skills for the future. </p>
-    <p> A couple of my hobbies are painting and writing. I like looking at and creating beauty in the world.
-        I am not married. I have been a member of the Church of Jesus Christ of Latter-Day Saints for my whole life. One of the quotes I like from general authorities
-        is from the October 2022 general Conference from Elder Ryan K Olsen. He said "No matter how difficult or confusing the challenges may be,
-        you can always remember that the answer is simple: it is always Jesus." 
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="aboutme/index.html">About Me Page</a>             
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>
+
 </body>
 </html>
