--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Building revenue by adding to online visablity adding to the customers that know about the company and the available times as well as preselecting spots and times. This also adds to the orginizational ability of the company. </p>
+    <p> Building revenue by adding visibility for the company. This includes times when they are open and buying tickets ahead of time. The other purpose is to add to organization for the company because it would allow for the employee to get a general count of who is coming on any given day.  </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The customers in order to buy tickets and see times. Likely being looked at on a phone or laptop for ease while on the go or on a trip. The employees in order to check for who is supposed to be there, how many people and when. </p>
+    <p>The customers - families and groups of friends - in order to buy tickets and see times. Likely being looked at on a phone or laptop for ease while on the go or on a trip. The employees in order to check for who is supposed to be there, how many people and when. </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images\wwrlogo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -41,8 +41,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/16302b-cee5f2-70798c-1c0674-2ba6b6"
+      target="_blank">https://coolors.co/16302b-cee5f2-70798c-1c0674-2ba6b6</a>
 
     <table class="colors">
       <tr>
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#2BA6B6</td>
+        <td class="secondary">#1C0674</td>
+        <td class="accent1">#16302B</td>
+        <td class="accent2">#70798C</td>
       </tr>
     </table>
 
@@ -66,11 +66,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Caveat Brush
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Ysabeau
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
