--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -119,9 +119,11 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rivers Wireframe</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/Screenshot 2023-06-06 133200.png" alt="page 2 wirframe">
+
+    <!--https://wireframe.cc/RDoLkE link to wire frame -->
   </main>
 </body>
 
