--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,7 +18,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="places.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -29,7 +29,7 @@
             </div>
             <section id="hero-mesg">
                 <h1 class="home-title">Come have an adventure on the River!!!</h1>
-                <h4>Make Memories with Trip Down the River</h4>
+                <h4 class="memory">Make Memories with Trip Down the River</h4>
                 <div class="button-box">
                     <a class="book" href="contactus.html">Book Your fun Now!!</a>
                 </div>
