--- a/wwr/places.html
+++ b/wwr/places.html
@@ -26,7 +26,7 @@
             <h1>
                 Rivers!
             </h1>
-            <img src="images/rafting11_1024.jpg" alt="People rafting next to red mountain">
+            <img class="top-img" src="images/rafting11_1024.jpg" alt="People rafting next to red mountain">
             <h3>
                 The rivers you can explore with us!
             </h3>
